Atualiza index, modifica styles, adiciona imagem cartao.png e remove arquivos de teste

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#">O que é</a>
     <a href="#">Benefícios</a>
     <a href="#">Recursos</a>
-    <a href="#">Contato</a>
+    <a href="https://wa.me/4198980137">Contato</a>
   </nav>
 </header>
 
@@ -39,23 +39,11 @@
 </a>
       </div>
     </div>
-
-    <div class="cartao-beneficio"> 
-  <div class="cartao-topo">
-    <i class="bi bi-credit-card-2-front"></i>
-  </div>
-  <div class="cartao-info">
-    <p class="titulo">Cartão de Benefícios</p>
-    <p class="marca">SUA MARCA</p>
-    <div class="linha"></div>
-    <p class="descricao">Saúde • Descontos • Bem-estar</p>
-  </div>
-</div> 
-      <!-- seu conteúdo do cartão -->
-       
+    <div class="cartao-beneficio">
+  <img src="cartao.png" alt="Cartão de Benefícios" class="img-cartao">
+</div>
     </div>
   </div>
-</div>
 
 
   <!-- 2/8 O que é o... -->
